# message

./: .dockerignore  .env.example  .env.template  .gitignore  Cargo.toml  Dockerfile  RABBITMQ_INTEGRATION.md  README.md  docker-compose.yml  openapi.json  swagger.yaml
api/: Cargo.toml
api/src/: app.rs  config.rs  lib.rs  main.rs
api/src/http/: mod.rs
api/src/http/attachments/: handlers.rs  routes.rs
api/src/http/friend/: handlers.rs  routes.rs
api/src/http/health/: handler.rs  routes.rs
api/src/http/messages/: handlers.rs  routes.rs
api/src/http/server/: api_error.rs  app_state.rs  authorization.rs  response.rs
api/src/http/server/middleware/auth/: mod.rs
api/src/http/servers/: handlers.rs  routes.rs
api/tests/: http_messages_integration.rs  servers.rs
api/tests/context/: mod.rs
config/: routing.yaml
core/: Cargo.toml
core/migrations/: 20251103202930_create_server_table.down.sql  20251103202930_create_server_table.up.sql  20251107090813_create_friends_table.down.sql  20251107090813_create_friends_table.up.sql  20251107091121_create_friend_requests_table.down.sql  20251107091121_create_friend_requests_table.up.sql  20251201000000_add_server_visibility.down.sql  20251201000000_add_server_visibility.up.sql  20251206120000_create_server_members_table.down.sql  20251206120000_create_server_members_table.up.sql
core/src/: lib.rs
core/src/application/: mod.rs
core/src/domain/: mod.rs  ports.rs
core/src/domain/attachment/: entities.rs  mod.rs  port.rs  services.rs
core/src/domain/common/: mod.rs  services.rs
core/src/domain/entities/: mod.rs
core/src/domain/friend/: entities.rs  ports.rs  services.rs
core/src/domain/health/: services.rs
core/src/domain/message/: entities.rs  events.rs  ports.rs  services.rs
core/src/domain/outbox/: ports.rs
core/src/domain/ports/: message_repository.rs  message_service.rs
core/src/domain/server/: entities.rs  ports.rs  services.rs
core/src/domain/server_member/: entities.rs  mod.rs  ports.rs  services.rs
core/src/domain/services/: message.rs  mod.rs
core/src/domain/test/: mod.rs
core/src/domain/test/friend/: mock_test.rs
core/src/domain/test/server/: mock_test.rs
core/src/domain/test/server_member/: mock_test.rs
core/src/infrastructure/: mod.rs
core/src/infrastructure/attachments/repositories/: entities.rs  mod.rs  reqwest.rs
core/src/infrastructure/friend/repositories/: error.rs  postgres.rs
core/src/infrastructure/message/repositories/: mongo.rs  postgres.rs
core/src/infrastructure/outbox/: entities.rs  event.rs  mod.rs  mongo.rs  writer.rs
core/src/infrastructure/rabbitmq/: mod.rs  publisher.rs  relay.rs
core/src/infrastructure/repositories/: message.rs
core/src/infrastructure/server/repositories/: postgres.rs
core/src/infrastructure/server_member/repositories/: mod.rs  postgres.rs
core/tests/: message_repo_tests.rs  message_service_tests.rs  mongo_repo_integration.rs
docs/src/api/: rabbitmq.md
helm/message/: .helmignore  Chart.yaml  values.yaml
helm/message/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  httproute.yaml  secret.yaml  service.yaml  serviceaccount.yaml
src/: domain.rs  lib.rs  main.rs  ports.rs  usecases.rs
src/adapters/: http.rs
src/repositories/: message.rs
