[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
futures-util = "0.3.31"
mongodb = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
