[package]
name = "communities_core"
description = "Core business logic library for Community Service"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "communities_core"
path = "src/lib.rs"

[features]
default = ["postgres"]
postgres = []

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
thiserror = { workspace = true }
utoipa = { version = "5.4.0", features = ["uuid", "chrono"] }

[dev-dependencies]
mockall = "0.13.1"
tokio = { version = "1", features = ["full"] }
